--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,206 +1,137 @@
-/**
- * Reset some basic elements
- */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: 0;
 }
-
-
-
-/**
- * Basic styling
- */
-body {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
-    font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
+html, body {
+  font-family: Open Sans;
+  color: #222222;
+  font-size: 16px;
+  line-height: 32px;
+  background: #F5F5F5;
 }
-
-
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
-}
-
-
-
-/**
- * Images
- */
-img {
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-
-
-/**
- * Figures
- */
-figure > img {
-    display: block;
-}
-
-figcaption {
-    font-size: $small-font-size;
-}
-
-
-
-/**
- * Lists
- */
-ul, ol {
-    margin-left: $spacing-unit;
-}
-
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
-}
-
-
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
-}
-
-
-
-/**
- * Links
- */
 a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
+  color: #222;
+  text-decoration: none;
 }
-
-
-
-/**
- * Blockquotes
- */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
-
-    > :last-child {
-        margin-bottom: 0;
-    }
+p {
+  padding: 0;
+  margin: 0;
 }
-
-
-
-/**
- * Code formatting
- */
-pre,
-code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
-
-code {
-    padding: 1px 5px;
+::-moz-selection {
+  color: #fff;
+  background: #1ECE6D;
 }
-
-pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
-
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+::selection {
+  color: #fff;
+  background: #1ECE6D;
 }
-
-
-
-/**
- * Wrapper
- */
-.wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-    @extend %clearfix;
-
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
+::-webkit-input-placeholder {
+    color: #a1a1a1;
 }
-
-
-
-/**
- * Clearfix
- */
-%clearfix {
-
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+:-moz-placeholder {
+   color: #a1a1a1;
+   opacity: 1;
 }
-
-
-
-/**
- * Icons
- */
-.icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $grey-color;
-        }
-    }
+::-moz-placeholder {
+   color: #a1a1a1;
+   opacity: 1;
 }
-
-@import "mailchimp"
+:-ms-input-placeholder {
+   color: #a1a1a1;
+}
+.cw-container {
+  max-width: 728px;
+  margin: 0 auto;
+  padding: 40px 40px 24px 40px;
+}
+.cw-logo {
+  line-height: 0;
+  text-align: center;
+  img {
+    width: 199px;
+  }
+}
+.cw-link {
+  text-decoration: none;
+  font-weight: bold;
+}
+.cw-text-left {
+  text-align: left;
+}
+.cw-white-background {
+  border: 2px solid #E8E8E8;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  padding: 24px;
+  background: #FFF;
+}
+.cw-text-right {
+  text-align: right;
+}
+.cw-text-center {
+  text-align: center;
+}
+.cw-font-18 {
+  font-size: 18px;
+}
+.cw-block {
+  display: block;
+}
+.cw-font-24 {
+  font-size: 24px;
+}
+.cw-bold {
+  font-weight: bold;
+}
+.cw-input-text {
+  width: 100%;
+  display: block;
+  padding: 0 16px;
+  color: #222;
+  background: #fff;
+  border: 2px solid #1ECE6D;
+  border-right: 0;
+  outline: none;
+  -webkit-border-radius: 8px;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-radius: 8px;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 0;
+  border-radius: 8px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  cursor: text;
+  font-family: Source Code Pro;
+  font-size: 18px;
+  line-height: 60px;
+  height: 60px;
+}
+.cw-input-button {
+  width: 100%;
+  padding: 0 16px;
+  -webkit-border-radius: 0;
+  -webkit-border-top-right-radius: 8px;
+  -webkit-border-bottom-right-radius: 8px;
+  -moz-border-radius: 0;
+  -moz-border-radius-topright: 8px;
+  -moz-border-radius-bottomright: 8px;
+  border-radius: 0;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border: 0;
+  background: #1ECE6D;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  line-height: 60px;
+  height: 60px;
+}
